fix overflow problems

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
     background-color: black;
     color: rgb(255, 255, 255);
     font-family: "Montserrat", sans-serif;
-    overflow-y: hidden;
+    overflow-x: hidden;
   }
   
 
@@ -162,6 +162,7 @@ a {
         font-size: 2.5em;
     }
     .menu{
+        display: none;
         transform: translateX(100%);
         transition: all 800ms cubic-bezier(.8, 0, .33, 1);
         background: #530b75;
@@ -174,6 +175,7 @@ a {
         z-index: 20;
     }
     .menu.open{
+        display: block;
         transform: translateX(0%);
         
     }
